<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_hint"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Spinner
            style="@style/Animation.Design.BottomSheetDialog"
            android:id="@+id/category_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:entries="@array/categories_only"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/name_hint"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/price_hint"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/price_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <Button
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/btn_color"
        android:insetTop="10dp"
        android:insetRight="35dp"
        android:insetBottom="10dp"
        android:onClick="insertToDB"
        android:text="@string/add_product"
        android:textSize="16sp"
        app:icon="@android:drawable/ic_input_add"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/clear_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/btn_color"
        android:insetRight="30dp"
        android:onClick="onClearClick"
        android:text="@string/clear_game"
        android:textSize="12sp"
        app:icon="@drawable/ic_baseline_delete_24"
        app:iconPadding="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/spinner_hint"
            android:text="@string/hint_category"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"/>

        <Spinner
            android:id="@+id/category_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="#9CFDA0"
            android:entries="@array/categories" />
    </LinearLayout>


    <ListView
        android:id="@+id/list_w_category"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF"

        />

</LinearLayout>